Adjustments to CSS and JS

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -15,6 +15,7 @@
     <section id="sideMenu">
       <nav>
         <a href="#" class="active"><i class="fas fa-home" aria-hidden="true"></i> Home</a>
+        <a href="#"><i class="fas fa-user-circle"></i> Profile</a>
         <a href="#"><i class="fas fa-book aria-hidden="true""></i> Grade Book</a>
         <a href="#"><i class="fas fa-chart-line" aria-hidden="true"></i> Statistics</a>
         <a href="#"><i class="fas fa-cog" aria-hidden="true"></i> Settings</a>
