--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -8,7 +8,7 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <link
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css
-    rel="stylesheet"">
+    rel="stylesheet>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   </head>
   <body>
@@ -16,7 +16,7 @@
       <nav>
         <a href="#" class="active"><i class="fas fa-home" aria-hidden="true"></i> Home</a>
         <a href="#"><i class="fas fa-user-circle"></i> Profile</a>
-        <a href="#"><i class="fas fa-book aria-hidden="true""></i> Grade Book</a>
+        <a href="#"><i class="fas fa-book" aria-hidden="true"></i> Grade Book</a>
         <a href="#"><i class="fas fa-chart-line" aria-hidden="true"></i> Statistics</a>
         <a href="#"><i class="fas fa-cog" aria-hidden="true"></i> Settings</a>
       </nav>
