--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
     <section id="sideMenu">
@@ -24,69 +24,41 @@
       </div>
 
       <div class="cards">
-        <div class="col-md-4">
+        <div class="col-md-2">
           <div class="card">
             <div class="user-img"></div>
             <span class="user-name">John Linkin</span>
             <span class="student-number">Student Number: 768765</span>
             <hr>
 
-            <div class="col-md-3">
+            <div class="col-md-2">
               <span class="faculty">Faculty</span>
-              <span class="faculty">Science</span>
+              <span class="faculty">Degree</span>
             </div>
-            <div class="col-md-9">
-              <span class="degree">Degree</span>
+            <div class="col-md-2">
+              <span class="degree">Science</span>
               <span class="degree">BSc Gen</span>
             </div>
           </div>
       </div>
 
-      <div class="col-md-4">
+      <div >
         <div class="card">
-          <h6>Current Grades</h6>
+          <div class="grades"><h6>Current Grades</h6></div>
+          <div class="demo-data"><img src="img/mark-data.png"></div>
         </div>
       </div>
       </div>
+    </section>
+
+    <section id="predictor">
+      <h1>Predictor</h1>
+
+      <div class="graph">
+        <img src="img/graph.jpeg">
+      </div>
 
 
-      <table>
-        <thead>
-          <tr>
-            <th>
-              Name
-            </th>
-            <th>
-              Student Number
-            </th>
-            <th>
-              Average Grade
-            </th>
-            <th>
-              <th>
-                Class
-              </th>
-            </th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td>
-              Sarah Thomas
-            </td>
-            <td>
-              78679
-            </td>
-            <td>
-              89
-            </td>
-            <td>
-              Astrophysics
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </section>
   </body>
 </html>
