--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -56,19 +56,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="table.html">
+                    <a href="grade.html">
                         <i class="pe-7s-note2"></i>
                         <p>Grade Book</p>
                     </a>
                 </li>
                 <li>
-                    <a href="table_copy.html">
+                    <a href="stats.html">
                         <i class="pe-7s-graph3"></i>
                         <p>Statistics</p>
                     </a>
                 </li>
                 <li>
-                    <a href="typography.html">
+                    <a href="settings.html">
                         <i class="pe-7s-settings"></i>
                         <p>Settings</p>
                     </a>
