--- a/dashboard/user.html
+++ b/dashboard/user.html
@@ -57,13 +57,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="table.html">
+                    <a href="grade.html">
                         <i class="pe-7s-note2"></i>
                         <p>Grade Book</p>
                     </a>
                 </li>
                 <li>
-                    <a href="table_copy.html">
+                    <a href="settings.html">
                         <i class="pe-7s-graph3"></i>
                         <p>Statistics</p>
                     </a>
@@ -114,14 +114,14 @@
                                         </div>
                                         <div class="col-md-3">
                                             <div class="form-group">
-                                                <label>Username</label>
-                                                <input type="text" class="form-control" placeholder="Username" value="michael23">
+                                                <label>Stu Num</label>
+                                                <input type="text" class="form-control" placeholder="Username" value="765636">
                                             </div>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Email address</label>
-                                                <input type="email" class="form-control" placeholder="Email">
+                                                <input type="email" class="form-control" placeholder="Email" value="drake@music.com">
                                             </div>
                                         </div>
                                     </div>
@@ -130,13 +130,13 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>First Name</label>
-                                                <input type="text" class="form-control" placeholder="Company" value="Mike">
+                                                <input type="text" class="form-control" placeholder="Company" value="Aubrey">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label>Last Name</label>
-                                                <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
+                                                <input type="text" class="form-control" placeholder="Drake Graham" value="Andrew">
                                             </div>
                                         </div>
                                     </div>
@@ -174,13 +174,21 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="form-group">
-                                                <label>About Me</label>
-                                                <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
+                                                <label>Previous School</label>
+                                                <input type="text" class="form-control" placeholder="City" value="St John's">
                                             </div>
                                         </div>
                                     </div>
 
-                                    <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <label>About Student</label>
+                                                <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">Currenly on a bursary from Universal Studios.</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <div class="clearfix"></div>
                                 </form>
                             </div>
